--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.4",
     "ts-node-dev": "^1.0.0-pre.51",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@types/node": "^14.0.27",
+    "moment": "^2.27.0"
   }
 }
